added hints to text excercise for conditional perfect

--- a/french/pages/exercise_conditionalperfect.html
+++ b/french/pages/exercise_conditionalperfect.html
@@ -30,273 +30,276 @@
 
                 <ol>
                     <li>
-                        Avec un peu plus d’étude, (<b>je réussir</b>)
+                        Avec un peu plus d’étude, (<b title="j'aurais réussi">je réussir</b>)
                         <input type="text" pattern="j'aurais réussi">
                         l’examen.
                     </li>
 
                     <li>
-                        Sans l’argent que tu m’as prêté, (<b>je ne pas pouvoir</b>)
+                        Sans l’argent que tu m’as prêté, (<b title="je n'aurais pas pu">je ne pas pouvoir</b>)
                         <input type="text" pattern="je n'aurais pas pu">
                         aller à l’épicerie.
                     </li>
 
                     <li>
-                        Sans tes petites notes, tu (<b>oublier</b>)
+                        Sans tes petites notes, tu (<b title="aurais oublié">oublier</b>)
                         <input type="text" pattern="aurais oublié">
                         les courses à faire.
                     </li>
 
                     <li>
-                        Si nous n’avions pas eu d’argent comptant, nous (<b>payer</b>)
+                        Si nous n’avions pas eu d’argent comptant,
+                        nous (<b title="aurions payé">payer</b>)
                         <input type="text" pattern="aurions payé">
                         avec une carte.
                     </li>
 
                     <li>
-                        Sans votre aide, ils (<b>être</b>)
+                        Sans votre aide, ils (<b title="auraient été">être</b>)
                         <input type="text" pattern="auraient été">
                         dans une situation délicate.
                     </li>
 
                     <li>
-                        Est-ce que vous (<b>ne pas trouver</b>)
+                        Est-ce que vous (<b title="n'auriez pas trouvé">ne pas trouver</b>)
                         <input type="text" pattern="n'auriez pas trouvé">
                         un téléphone cellulaire ?
                     </li>
 
                     <li>
-                        Il est très tard. Elle (<b>devoir</b>)
+                        Il est très tard. Elle (<b title="aurait dû">devoir</b>)
                         <input type="text" pattern="aurait dû">
                         arriver il y a des heures.
                     </li>
 
                     <li>
-                        Sans cette pluie qui ne cesse de tomber, nous (<b>s'amuser</b>)
+                        Sans cette pluie qui ne cesse de tomber,
+                        nous (<b title="ous serions amusés">s'amuser</b>)
                         <input type="text" pattern="nous serions amusés">
                         .
                     </li>
 
                     <li>
-                        Je (<b>aller</b>)
+                        Je (<b title="serais allé">aller</b>)
                         <input type="text" pattern="serais allé">
                         avec vous, si vous me l’aviez proposé.
                     </li>
 
                     <li>
-                        En cherchant davantage, nous (<b>découvrir</b>)
+                        En cherchant davantage, nous (<b title="aurions découvert">découvrir</b>)
                         <input type="text" pattern="aurions découvert">
                         le trésor.
                     </li>
 
                     <li>
-                        Sans cet accident, je (<b>se souvenir</b>)
+                        Sans cet accident, je (<b title="me serais souvenu">se souvenir</b>)
                         <input type="text" pattern="me serais souvenu">
                         du nom de mes amis.
                     </li>
 
                     <li>
-                        Si vous aviez frappé, je vous (<b>ouvrir</b>)
+                        Si vous aviez frappé, je vous (<b title="aurais ouvert">ouvrir</b>)
                         <input type="text" pattern="aurais ouvert">
                         la porte.
                     </li>
 
                     <li>
-                        En allant à la campagne, nous (<b>cueillir</b>)
+                        En allant à la campagne, nous (<b title="aurions cueilli">cueillir</b>)
                         <input type="text" pattern="aurions cueilli">
                         des petits fruits.
                     </li>
 
                     <li>
-                        Je (<b>se servir</b>)
+                        Je (<b title="me serais servi">se servir</b>)
                         <input type="text" pattern="me serais servi">
                         une assiette de fromages, si j’avais eu faim.
                     </li>
 
                     <li>
-                        Sans son manteau et ses gants, ils (<b>mourir</b>)
+                        Sans son manteau et ses gants, ils (<b title="seraient morts">mourir</b>)
                         <input type="text" pattern="seraient morts">
                         de froid.
                     </li>
 
                     <li>
-                        Si vous étiez nés à cette époque, vous (<b>connaître</b>)
+                        Si vous étiez nés à cette époque, vous (<b title="auriez connu">connaître</b>)
                         <input type="text" pattern="auriez connu">
                         le romantisme.
                     </li>
 
                     <li>
-                        Sans votre soutien, elle (<b>suivre</b>)
+                        Sans votre soutien, elle (<b title="aurait suivi">suivre</b>)
                         <input type="text" pattern="aurait suivi">
                         un tout autre chemin dans la vie.
                     </li>
 
                     <li>
-                        Les étudiantes (<b>s’asseoir</b>)
+                        Les étudiantes (<b title="se seraient assises">s’asseoir</b>)
                         <input type="text" pattern="se seraient assises">
                         sur un banc en vous attendant.
                     </li>
 
                     <li>
-                        Ce chanteur à la mode (<b>plaire</b>)
+                        Ce chanteur à la mode (<b title="aurait plu">plaire</b>)
                         <input type="text" pattern="aurait plu">
                         à ma grand-mère.
                     </li>
 
                     <li>
-                        Autrefois, je (<b>ne rien dire</b>)
+                        Autrefois, je (<b title="n'aurais rien dit">ne rien dire</b>)
                         <input type="text" pattern="n'aurais rien dit">
-                        ,je (<b>se taire</b>)
+                        ,je (<b title="me serais tu">se taire</b>)
                         <input type="text" pattern="me serais tu">
                         .
                     </li>
 
                     <li>
-                        Ce clown amusant (<b>distraire</b>)
+                        Ce clown amusant (<b title="aurait distrait">distraire</b>)
                         <input type="text" pattern="aurait distrait">
                         les petits enfants.
                     </li>
 
                     <li>
-                        Ils (<b>boire</b>)
+                        Ils (<b title="auraient bu">boire</b>)
                         <input type="text" pattern="auraient bu">
                         de la bière, s’ils étaient venus à notre soirée.
                     </li>
 
                     <li>
-                        (<b>Je croire</b>)
+                        (<b title="j'aurais cru">Je croire</b>)
                         <input type="text" pattern="j'aurais cru">
                         que la vérité sur cette histoire était bien différente.
                     </li>
 
                     <li>
-                        Le serveur (<b>devoir</b>)
+                        Le serveur (<b title="aurait dû">devoir</b>)
                         <input type="text" pattern="aurait dû">
                         nous offrir un verre d’eau ! J’ai soif !
                     </li>
 
                     <li>
-                        Pour gagner à la loterie, il (<b>falloir</b>)
+                        Pour gagner à la loterie, il (<b title="aurait fallu">falloir</b>)
                         <input type="text" pattern="aurait fallu">
                         que tu achètes un billet.
                     </li>
 
                     <li>
-                        Il (<b>mieux valoir</b>)
+                        Il (<b title="aurait mieux valu">mieux valoir</b>)
                         <input type="text" pattern="aurait mieux valu">
                         que tu arrives plus tôt.
                     </li>
 
                     <li>
-                        Si tu m’avais expliqué la situation, (<b>je savoir</b>)
+                        Si tu m’avais expliqué la situation, (<b title="j'aurais su">je savoir</b>)
                         <input type="text" pattern="j'aurais su">
                         quoi dire au professeur.
                     </li>
 
                     <li>
-                        Par chance que nous ne sommes pas allés en Floride, il (<b>pleuvoir</b>)
+                        Par chance que nous ne sommes pas allés en Floride,
+                        il (<b title="aurait plu">pleuvoir</b>)
                         <input type="text" pattern="aurait plu">
                         tout le temps.
                     </li>
 
                     <li>
-                        En d’autres circonstances, ma mère (<b>recevoir</b>)
+                        En d’autres circonstances, ma mère (<b title="aurait reçu">recevoir</b>)
                         <input type="text" pattern="aurait reçu">
                         toute notre famille.
                     </li>
 
                     <li>
-                        Il y a 100 ans, cette pièce de monnaie (<b>valoir</b>)
+                        Il y a 100 ans, cette pièce de monnaie (<b title="aurait valu">valoir</b>)
                         <input type="text" pattern="aurait valu">
                         peu d’argent.
                     </li>
 
                     <li>
-                        Les garçons, vous (<b>décevoir</b>)
+                        Les garçons, vous (<b title="auriez déçu">décevoir</b>)
                         <input type="text" pattern="auriez déçu">
                         vos parents, si vous aviez échoué.
                     </li>
 
                     <li>
-                        Si tu n’avais pas travaillé, tu (<b>avoir</b>)
+                        Si tu n’avais pas travaillé, tu (<b title="aurais eu">avoir</b>)
                         <input type="text" pattern="aurais eu">
                         plus de temps pour te reposer.
                     </li>
 
                     <li>
-                        Tu (<b>pouvoir</b>)
+                        Tu (<b title="aurais pu">pouvoir</b>)
                         <input type="text" pattern="aurais pu">
                         au moins dire «bonjour» à nos voisins !
                     </li>
 
                     <li>
-                        S’il avait fait beau, nous (<b>se promener</b>)
+                        S’il avait fait beau, nous (<b title="serions promenés">se promener</b>)
                         <input type="text" pattern="serions promenés">
                         dans le parc.
                     </li>
 
                     <li>
-                        Il (<b>falloir</b>)
+                        Il (<b title="aurait fallu">falloir</b>)
                         <input type="text" pattern="aurait fallu">
                         que tu battes les œufs avant de les cuire.
                     </li>
 
                     <li>
-                        (<b>Je espérer</b>)
-                        <input type="text" pattern="J'aurais espéré">
+                        (<b title="J'aurais espéré">Je espérer</b>)
+                        <input type="text" pattern="[Jj]'aurais espéré">
                         que notre relation évolue différemment.
                     </li>
 
                     <li>
-                        En cas de crise, ils (<b>appeler</b>)
+                        En cas de crise, ils (<b title="auraient appelé">appeler</b>)
                         <input type="text" pattern="auraient appelé">
                         l’ambulance ou la police.
                     </li>
 
                     <li>
-                        Les filles (<b>venir</b>)
+                        Les filles (<b title="seraient venues">venir</b>)
                         <input type="text" pattern="seraient venues">
                         au cinéma avec nous, si nous leur en avions parlé.
                     </li>
 
                     <li>
-                        Sans y penser, (<b>je faire</b>)
+                        Sans y penser, (<b title="j'aurais fait">je faire</b>)
                         <input type="text" pattern="j'aurais fait">
                         des erreurs ! Incroyable !!!
                     </li>
 
                     <li>
-                        Le directeur (<b>donner</b>)
+                        Le directeur (<b title="aurait donné">donner</b>)
                         <input type="text" pattern="aurait donné">
                         de nouvelles consignes au personnel.
                     </li>
 
                     <li>
-                        Mes voisins (<b>recueillir</b>)
+                        Mes voisins (<b title="auraient recueilli">recueillir</b>)
                         <input type="text" pattern="auraient recueilli">
                         un beau petit chat abandonné.
                     </li>
 
                     <li>
-                        Les enfants (<b>s’endormir</b>)
+                        Les enfants (<b title="se seraient endormis">s’endormir</b>)
                         <input type="text" pattern="se seraient endormis">
                         très facilement.
                     </li>
 
                     <li>
-                        Cet accusé (<b>se défendre</b>)
+                        Cet accusé (<b title="se serait défendu">se défendre</b>)
                         <input type="text" pattern="se serait défendu">
                         avec l’énergie du condamné.
                     </li>
 
                     <li>
-                        Ils (<b>voir</b>)
+                        Ils (<b title="auraient vu">voir</b>)
                         <input type="text" pattern="auraient vu">
                         plusieurs versions de ce film.
                     </li>
 
                     <li>
-                        Cette actrice américaine (<b>disparaître</b>)
+                        Cette actrice américaine (<b title="aurait disparu">disparaître</b>)
                         <input type="text" pattern="aurait disparu">
                         de chez elle hier.
                     </li>
