added descriptions to colorful hints in concordance 3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -148,16 +148,20 @@
                             <input type="text" class="wide" pattern="avait continué">
                             de fréquenter cette
                             <span class="sentence-with-hint">
-                                fille <span class="hint"
-                                    title="L’imparfait: c’est une description (pas une action): originaire de Toronto">qui
-                                    (<b title="venait">venir</b>)
-                                </span>
+                                fille qui (<b title="venait">venir</b>)
                                 <input type="text" pattern="venait">
-                                elle aussi de Toronto
+                                elle aussi
+                                <span class="hint"
+                                    title="L’imparfait: c’est une description (pas une action): originaire de Toronto">
+                                    de Toronto
+                                </span>
                             </span>
                             et,
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">quelques années plus tard</span>,
+                                <span class="hint" title="Le passé composé: 
+                                    le mariage est un événement principal et ponctuel, 
+                                    il arrive après les actions décrites au plus-que-parfait">
+                                    quelques années plus tard</span>,
                                 ils (<b title="se sont mariés">se marier</b>)
                                 <input type="text" class="wide" pattern="se sont mariés">
                             </span>
@@ -198,7 +202,9 @@
                             village d’Ogunquit dans le Maine aux États-Unis.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Il y a quelques années</span>,
+                                <span class="hint"
+                                    title="Plus-que-parfait: une découverte faite dans un passé déjà lointain, dans le cadre d’une narration globale au passé">Il
+                                    y a quelques années</span>,
                                 nous (<b title="avions découvert">découvrir</b>)
                                 <input type="text" class="wide" pattern="avions découvert">
                                 là une charmante vieille maison centenaire
@@ -248,9 +254,14 @@
                             <input type="text" pattern="avions dû">
                             penser à ne rien oublier.
 
-                            Il (<b title="a fallu">falloir</b>)
-                            <input type="text" pattern="a fallu">
-                            six heures de route pour se rendre à cet endroit,
+                            <span class="sentence-with-hint">
+                                Il (<b title="a fallu">falloir</b>)
+                                <input type="text" pattern="a fallu">
+                                <span class="hint"
+                                    title="Le passé composé: un fait précis et accompli dans le passé, ponctuel (qui ne dure pas)">
+                                    six heures</span>
+                                de route pour se rendre à cet endroit,
+                            </span>
                             mais il (<b title="faisait">faire</b>)
                             <input type="text" pattern="faisait">
                             beau et chaud et nous (<b title="avions">avoir</b>)
@@ -308,7 +319,10 @@
                             <span class="sentence-with-hint">
                                 Nous (<b title="nous sommes reposés">se reposer</b>)
                                 <input type="text" class="extra-wide" pattern="nous sommes reposés">
-                                <span class="hint" title="">toute la semaine</span>
+                                <span class="hint"
+                                    title="Le passé composé: c’est une action principale, ponctuelle, accomplie,
+                                il n’y a pas de verbe conjugué au passé qui suit, donc pas besoin du plus-que-parfait">toute la
+                                    semaine</span>
                                 avant de revenir à la maison.
                             </span>
                         </p>
@@ -355,9 +369,14 @@
                             Elle (<b title="n'oubliait pas|n'avait pas oublié">n’oublier pas</b>)
                             <input type="text" class="wide" pattern="n'oubliait pas|n'avait pas oublié">
                             la nappe et les ustensiles de couleurs dont nous
-                            (<b title="nous servions">se servir</b>)
-                            <input type="text" class="wide" pattern="nous servions">
-                            seulement à cette occasion et mon père (<b title="mettait|avait mis">mettre</b>)
+                            <span class="sentence-with-hint">
+                                (<b title="nous servions">se servir</b>)
+                                <input type="text" class="wide" pattern="nous servions">
+                                <span class="hint"
+                                    title="L’imparfait: c’est une action non ponctuelle, répétée dans le passé (à chaque fois qu’il y avait cette occasion)">seulement
+                                    à cette occasion</span>
+                            </span>
+                            et mon père (<b title="mettait|avait mis">mettre</b>)
                             <input type="text" pattern="mettait|avait mis">
                             dans l’auto les ballons et jeux qui amuseraient tout le monde.
 
@@ -394,8 +413,8 @@
 
                             Nous (<b title="ne pouvions pas|n'avons pas pu">ne pouvoir pas</b>)
                             <input type="text" class="wide" pattern="ne pouvions pas|n'avons pas pu">
-                            jouer beaucoup et plusieurs voisins ne (<b title="sont pas venus">venir pas</b>)
-                            <input type="text" class="wide" pattern="sont pas venus">
+                            jouer beaucoup et plusieurs voisins (<b title="sont pas venus">ne venir pas</b>)
+                            <input type="text" class="wide" pattern="ne sont pas venus">
                             .
 
                             <span class="sentence-with-hint">
@@ -412,12 +431,18 @@
                             de crème glacée.
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">L’année suivante</span>,
+                                <span class="hint"
+                                    title="Plus-que-parfait: un événement antérieur à un autre moment passé (mort ➝ refus)">L’année
+                                    suivante</span>,
                                 mon père (<b title="était mort">mourir</b>)
                                 <input type="text" pattern="était mort">
+                            </span>
+                            <span class="sentence-with-hint">
                                 et ma mère (<b title="n'a pas voulu">ne vouloir pas</b>)
-                                <input type="text" pattern="n'a pas voulu">
-                                participer à cette fête de quartier.
+                                <input type="text" class="wide" pattern="n'a pas voulu">
+                                <span class="hint" title="Le passé composé: une action ponctuelle, achevée et décisive dans le passé
+                                c’est une action principale du récit, datée (l’année suivante)">participer à cette fête
+                                    de quartier.</span>
                             </span>
 
                             <span class="sentence-with-hint">
@@ -477,10 +502,15 @@
                             <input type="text" pattern="fallait">
                             .
 
-                            Elle (<b title="avait acheté">acheter</b>)
-                            <input type="text" pattern="avait acheté">
-                            des cahiers et des crayons, et même un joli sac d’école rouge et
-                            vert en cuir.
+                            <span class="sentence-with-hint">
+                                Elle (<b title="avait acheté">acheter</b>)
+                                <input type="text" pattern="avait acheté">
+                                <span class="hint" title="plus-que-parfait: une action accomplie avant une autre action passée (« elle préparait… »)
+                            achat des fournitures → puis préparation avec ces fournitures">
+                                    des cahiers et des crayons, et même un joli sac d’école rouge et
+                                    vert en cuir.
+                                </span>
+                            </span>
 
                             Pour elle, (<b title="c'était">ce être</b>)
                             <input type="text" pattern="c'était">
@@ -488,9 +518,14 @@
                             <input type="text" pattern="devenait">
                             un grand homme; pour moi, (<b title="c'était">ce être</b>)
                             <input type="text" pattern="c'était">
-                            un jour triste où je (<b title="ne pouvais pas">ne pas pouvoir</b>)
-                            <input type="text" class="wide" pattern="ne pouvais pas">
-                            m’amuser à ma guise.
+                            un jour triste où
+                            <span class="sentence-with-hint">
+                                je (<b title="ne pouvais pas">ne pas pouvoir</b>)
+                                <input type="text" class="wide" pattern="ne pouvais pas">
+                                <span class="hint" title="L’imparfait: Un état psychologique,
+                   Une action non ponctuelle, non achevée, qui dure pendant une période (la journée)">m’amuser
+                                    à ma guise.</span>
+                            </span>
 
                             <span class="sentence-with-hint">
                                 <span class="hint" title="">Ce matin-là</span>,
@@ -499,9 +534,13 @@
                                 à l’autobus.
                             </span>
 
-                            J’ai l’impression que nous (<b title="avons attendu">attendre</b>)
-                            <input type="text" class="wide" pattern="avons attendu">
-                            très longtemps.
+                            <span class="sentence-with-hint">
+                                <span class="hint" title="Le passé composé: c’est une action terminée,
+                                imparfait suggérerait que l’attente est en cours au moment de parler">
+                                    J’ai l’impression</span> que nous (<b title="avons attendu">attendre</b>)
+                                <input type="text" class="wide" pattern="avons attendu">
+                                très longtemps.
+                            </span>
 
                             <span class="sentence-with-hint">
                                 <span class="hint" title="">Enfin</span>,
@@ -535,7 +574,7 @@
                                 <input type="text" pattern="suis arrivé">
                                 dans la classe
                             </span>
-                            , ma professeure me (<b title="m'attendait">attendre</b>)
+                            , ma professeure (<b title="m'attendait">me attendre</b>)
                             <input type="text" pattern="m'attendait">
                             .
 
@@ -549,9 +588,16 @@
                             <input type="text" pattern="avait">
                             une voix très douce.
 
-                            Sur le tableau de la classe, je (<b title="voyais">voir</b>)
-                            <input type="text" pattern="voyais">
-                            les lettres de l’alphabet qu’
+                            <span class="sentence-with-hint">
+                                Sur le tableau de la classe, je (<b title="voyais">voir</b>)
+                                <input type="text" pattern="voyais">
+                                <span class="hint" title="L’imparfait: une perception visuelle continue
+                   il crée une scène, un décor
+                   passé composé ferait de la vision un événement ponctuel, instantané: 'soudain, je les ai vues'">
+                                    les lettres de l’alphabet
+                                </span>
+                            </span>
+                            qu’
                             <span class="sentence-with-hint">
                                 elle (<b title="avait déjà écrites">écrire
                                     <span class="hint" title="">déjà</span></b>)
