added explanations for hints to concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -237,7 +237,7 @@
                             .
 
                             Nous (<b title="étions allés">aller</b>)
-                            <input type="text" pattern="étions allés">
+                            <input type="text" class="wide" pattern="étions allés">
                             à la banque acheter de l’argent américain, nous (<b title="avions vérifié">vérifier</b>)
                             <input type="text" pattern="avions vérifié">
                             nos passeports et nous (<b title="avions fait">faire</b>)
@@ -250,9 +250,14 @@
                                 <input type="text" pattern="voulions">
                                 faire un beau voyage,
                             </span>
-                            nous (<b title="avions dû">devoir</b>)
-                            <input type="text" pattern="avions dû">
-                            penser à ne rien oublier.
+                            <span class="sentence-with-hint">
+                                nous (<b title="avions dû">devoir</b>)
+                                <input type="text" pattern="avions dû">
+                                <span class="hint" title="plus-que-parfait: une action obligée et accomplie
+                            terminée avant une autre action passée (ici : le voyage)">
+                                    penser à ne rien oublier.
+                                </span>
+                            </span>
 
                             <span class="sentence-with-hint">
                                 Il (<b title="a fallu">falloir</b>)
@@ -426,9 +431,15 @@
 
                             Nous (<b title="avons mangé">manger</b>)
                             <input type="text" pattern="avons mangé">
-                            le repas dans le salon et nous (<b title="n'avons pas eu">ne avoir pas</b>)
-                            <input type="text" class="wide" pattern="n'avons pas eu">
-                            de crème glacée.
+                            le repas dans le salon et
+                            <span class="sentence-with-hint">
+                                nous (<b title="n'avons pas eu">ne avoir pas</b>)
+                                <input type="text" class="wide" pattern="n'avons pas eu">
+                                <span class="hint" title="Le passé composé: un constat précis, terminé dans le passé
+                               un événement ponctuel dans un cadre bien défini (le repas)">
+                                    de crème glacée.
+                                </span>
+                            </span>
 
                             <span class="sentence-with-hint">
                                 <span class="hint"
@@ -498,8 +509,8 @@
                                 <input type="text" pattern="préparait|avait préparé">
                                 tout
                             </span>
-                            ce qu’il me (<b title="fallait">falloir</b>)
-                            <input type="text" pattern="fallait">
+                            ce qu’il (<b title="fallait">me falloir</b>)
+                            <input type="text" pattern="me fallait">
                             .
 
                             <span class="sentence-with-hint">
