fine-tuning concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -509,7 +509,7 @@
                                 <input type="text" pattern="préparait|avait préparé">
                                 tout
                             </span>
-                            ce qu’il (<b title="fallait">me falloir</b>)
+                            ce qu’il (<b title="me fallait">me falloir</b>)
                             <input type="text" pattern="me fallait">
                             .
 
