--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -26,14 +26,32 @@
                 <caption>Statistiques</caption>
                 <thead>
                     <tr>
+                        <th></th>
+                        <th colspan="4">A1</th>
+                        <th colspan="4">A2</th>
+                        <th colspan="6">B1</th>
+                        <th colspan="4">B2</th>
+                        <th colspan="3"></th>
+                    </tr>
+                    <tr>
                         <th rowspan="2">date</th>
+                        <!-- A1 -->
                         <th colspan="2">présent</th>
                         <th colspan="2">passé composé</th>
+
+                        <!-- A2 -->
                         <th colspan="2">imparfait</th>
                         <th colspan="2">futur simple</th>
+
+                        <!-- B1 -->
                         <th colspan="2">plus-que-parfait</th>
                         <th colspan="2">conditionnel présent</th>
+                        <th colspan="2">subjonctif présent</th>
+
+                        <!-- B2 -->
                         <th colspan="2">conditionnel passé</th>
+                        <th colspan="2">futur antérieur</th>
+
                         <th colspan="3">concordance</th>
                     </tr>
                     <tr>
@@ -61,9 +79,17 @@
                         <th><a href="conjugations.html?Le%20conditionnel%20pr%C3%A9sent">liste</a></th>
                         <th><a href="exercise_conditionalpresent.html">texte</a></th>
 
+                        <!-- subjonctif présent -->
+                        <th>liste</th>
+                        <th>texte</th>
+
                         <!-- conditionnel passé -->
                         <th><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
                         <th><a href="exercise_conditionalperfect.html">texte</a></th>
+
+                        <!-- futur antérieur -->
+                        <th>liste</th>
+                        <th>texte</th>
 
                         <!-- concordance -->
                         <th><a href="exercise_concordance.html" title="imparfait - passé composé">i.-p.c.</a></th>
@@ -96,8 +122,14 @@
                             <td class="conjugations.html?Le%20conditionnel%20pr%C3%A9sent"></td>
                             <td class="exercise_conditionalpresent.html"></td>
 
+                            <td class=""></td>
+                            <td class=""></td>
+
                             <td class="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
                             <td class="exercise_conditionalperfect.html"></td>
+
+                            <td class=""></td>
+                            <td class=""></td>
 
                             <td class="exercise_concordance.html"></td>
                             <td class="exercise_concordance3.html"></td>
