added more descriptions for grammar hints in concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -130,9 +130,15 @@
                             <input type="text" pattern="trouvait|l'a trouvé">
                             si gentil, elle (<b title="s'est assise">s’asseoir</b>)
                             <input type="text" pattern="s'est assise">
-                            avec lui et ils (<b title="ont passé">passer</b>)
-                            <input type="text" pattern="ont passé">
-                            la soirée l’un à côté de l’autre à bavarder.
+                            avec lui et
+                            <span class="sentence-with-hint">
+                                ils (<b title="ont passé">passer</b>)
+                                <input type="text" pattern="ont passé">
+                                <span class="hint"
+                                    title="Le passé composé: durée précise, entière, terminée ('la soirée')">
+                                    la soirée</span>
+                                l’un à côté de l’autre à bavarder.
+                            </span>
 
                             <span class="sentence-with-hint">
                                 <span class="hint" title="">Des mois plus tard</span>,
@@ -144,9 +150,14 @@
                             <input type="text" pattern="avait changé">
                             radicalement.
 
-                            Il (<b title="avait continué">continuer</b>)
-                            <input type="text" class="wide" pattern="avait continué">
-                            de fréquenter cette
+                            <span class="sentence-with-hint">
+                                Il (<b title="avait continué">continuer</b>)
+                                <input type="text" class="wide" pattern="avait continué">
+                                <span class="hint"
+                                    title="Le passé composé: action antérieure (fréquenter) à l’autre événement passé (marriage)">
+                                    de fréquenter</span>
+                                cette
+                            </span>
                             <span class="sentence-with-hint">
                                 fille qui (<b title="venait">venir</b>)
                                 <input type="text" pattern="venait">
@@ -230,7 +241,9 @@
                             </span>
 
                             <span class="sentence-with-hint">
-                                <span class="hint" title="">Avant de partir</span>,
+                                <span class="hint"
+                                    title="plus-que-parfait: la préparation était terminée avant le départ">Avant de
+                                    partir</span>,
                                 nous (<b title="nous étions préparés">se préparer</b>)
                                 <input type="text" class="extra-wide" pattern="nous étions préparés">
                             </span>
@@ -418,7 +431,7 @@
 
                             Nous (<b title="ne pouvions pas|n'avons pas pu">ne pouvoir pas</b>)
                             <input type="text" class="wide" pattern="ne pouvions pas|n'avons pas pu">
-                            jouer beaucoup et plusieurs voisins (<b title="sont pas venus">ne venir pas</b>)
+                            jouer beaucoup et plusieurs voisins (<b title="ne sont pas venus">ne venir pas</b>)
                             <input type="text" class="wide" pattern="ne sont pas venus">
                             .
 
@@ -589,9 +602,14 @@
                             <input type="text" pattern="m'attendait">
                             .
 
-                            Elle (<b title="s'appelait">s’appeler</b>)
-                            <input type="text" pattern="s'appelait">
-                            madame Lamy.
+                            <span class="sentence-with-hint">
+                                Elle (<b title="s'appelait">s’appeler</b>)
+                                <input type="text" pattern="s'appelait">
+                                <span class="hint" title="L’imparfait: description stable dans le passé (décrit une identité)
+                   Passé composé sonnerait étrange, comme si elle avait changé de nom ensuite">
+                                    madame Lamy.
+                                </span>
+                            </span>
 
                             Elle (<b title="était">être</b>)
                             <input type="text" pattern="était">
