added imperative to stats table

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -93,8 +93,8 @@
                             </span>
 
                             Certains (<b title="chantaient">chanter</b>)
-                            <input type="text" pattern="chantaient">
-                            , d’autres (<b title="prenaient">prendre</b>)
+                            <input type="text" pattern="chantaient">,
+                            d’autres (<b title="prenaient">prendre</b>)
                             <input type="text" pattern="prenaient">
                             de la bière et (<b title="bavardaient">bavarder</b>)
                             <input type="text" pattern="bavardaient">
