--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -28,7 +28,7 @@
                     <tr>
                         <th></th>
                         <th colspan="4">A1</th>
-                        <th colspan="4">A2</th>
+                        <th colspan="6">A2</th>
                         <th colspan="6">B1</th>
                         <th colspan="4">B2</th>
                         <th colspan="3"></th>
@@ -42,6 +42,7 @@
                         <!-- A2 -->
                         <th colspan="2">imparfait</th>
                         <th colspan="2">futur simple</th>
+                        <th colspan="2">impératif</th>
 
                         <!-- B1 -->
                         <th colspan="2">plus-que-parfait</th>
@@ -55,6 +56,7 @@
                         <th colspan="3">concordance</th>
                     </tr>
                     <tr>
+                        <!-- A1 -->
                         <!-- présent -->
                         <th><a href="conjugations.html?Le%20pr%C3%A9sent">liste</a></th>
                         <th><a href="exercise_present.html">texte</a></th>
@@ -63,6 +65,7 @@
                         <th><a href="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9">liste</a></th>
                         <th><a href="exercise_presentperfect.html">texte</a></th>
 
+                        <!-- A2 -->
                         <!-- imparfait -->
                         <th><a href="conjugations.html?L'imparfait">liste</a></th>
                         <th><a href="exercise_imperfect.html">texte</a></th>
@@ -71,6 +74,11 @@
                         <th><a href="conjugations.html?Le%20futur%20simple">liste</a></th>
                         <th><a href="exercise_future.html">texte</a></th>
 
+                        <!-- impératif -->
+                        <th>liste</th>
+                        <th>texte</th>
+
+                        <!-- B1 -->
                         <!-- plus-que-parfait -->
                         <th><a href="conjugations.html?Le%20plus-que-parfait">liste</a></th>
                         <th><a href="exercise_pastperfect.html">texte</a></th>
@@ -83,6 +91,7 @@
                         <th>liste</th>
                         <th>texte</th>
 
+                        <!-- B2 -->
                         <!-- conditionnel passé -->
                         <th><a href="conjugations.html?Le%20conditionnel%20passé">liste</a></th>
                         <th><a href="exercise_conditionalperfect.html">texte</a></th>
@@ -104,18 +113,24 @@
                         <tr>
                             <td class="date"></td>
 
+                            <!-- A1 -->
                             <td class="conjugations.html?Le%20pr%C3%A9sent"></td>
                             <td class="exercise_present.html"></td>
 
                             <td class="conjugations.html?Le%20pass%C3%A9%20compos%C3%A9"></td>
                             <td class="exercise_presentperfect.html"></td>
 
+                            <!-- A2 -->
                             <td class="conjugations.html?L%27imparfait"></td>
                             <td class="exercise_imperfect.html"></td>
 
                             <td class="conjugations.html?Le%20futur%20simple"></td>
                             <td class="exercise_future.html"></td>
 
+                            <td class=""></td>
+                            <td class=""></td>
+
+                            <!-- B1 -->
                             <td class="conjugations.html?Le%20plus-que-parfait"></td>
                             <td class="exercise_pastperfect.html"></td>
 
@@ -125,6 +140,7 @@
                             <td class=""></td>
                             <td class=""></td>
 
+                            <!-- B2 -->
                             <td class="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
                             <td class="exercise_conditionalperfect.html"></td>
 
