--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -29,7 +29,7 @@
                         <th></th>
                         <th colspan="4">A1</th>
                         <th colspan="6">A2</th>
-                        <th colspan="6">B1</th>
+                        <th colspan="7">B1</th>
                         <th colspan="4">B2</th>
                         <th colspan="3"></th>
                     </tr>
@@ -48,6 +48,7 @@
                         <th colspan="2">plus-que-parfait</th>
                         <th colspan="2">conditionnel présent</th>
                         <th colspan="2">subjonctif présent</th>
+                        <th colspan="1">passif</th>
 
                         <!-- B2 -->
                         <th colspan="2">conditionnel passé</th>
@@ -89,6 +90,9 @@
 
                         <!-- subjonctif présent -->
                         <th>liste</th>
+                        <th>texte</th>
+
+                        <!-- passif -->
                         <th>texte</th>
 
                         <!-- B2 -->
@@ -139,6 +143,8 @@
 
                             <td class=""></td>
                             <td class=""></td>
+
+                            <td class="passive"></td>
 
                             <!-- B2 -->
                             <td class="conjugations.html?Le%20conditionnel%20pass%C3%A9"></td>
