fined tuned concordance3

--- a/french/pages/exercise_pastperfect.html
+++ b/french/pages/exercise_pastperfect.html
@@ -139,7 +139,7 @@
 
                     <li>
                         Quand je (<b title="m'étais assis">s’asseoir</b>)
-                        <input type="text" pattern="m'étais assis">
+                        <input type="text" class="wide" pattern="m'étais assis">
                         , j’ai remarqué l’omniprésence des papillons.
                     </li>
 
