--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -126,9 +126,18 @@
 
                             Il lui (<b title="a parlé">parler</b>)
                             <input type="text" pattern="a parlé">
-                            et, comme elle (<b title="trouvait|l'a trouvé">le trouver</b>)
-                            <input type="text" pattern="trouvait|l'a trouvé">
-                            si gentil, elle (<b title="s'est assise">s’asseoir</b>)
+                            et,
+                            <span class="sentence-with-hint">
+                                <span class="hint"
+                                    title="Le passé composé: une cause ponctuelle et décisive qui déclenche la suite
+                                réaction immédiate, proche de l’action suivante
+                                plus-que-parfait serait correct mais aurait une valeur plus distanciée, moins dynamique">
+                                    comme elle</span>
+                                (<b title="le trouvait|l'a trouvé">le trouver</b>)
+                                <input type="text" pattern="le trouvait|l'a trouvé">
+                                si gentil,
+                            </span>
+                            elle (<b title="s'est assise">s’asseoir</b>)
                             <input type="text" pattern="s'est assise">
                             avec lui et
                             <span class="sentence-with-hint">
@@ -154,7 +163,7 @@
                                 Il (<b title="avait continué">continuer</b>)
                                 <input type="text" class="wide" pattern="avait continué">
                                 <span class="hint"
-                                    title="Le passé composé: action antérieure (fréquenter) à l’autre événement passé (marriage)">
+                                    title="Plus-que-parfait: action antérieure (fréquenter) à l’autre événement passé (marriage)">
                                     de fréquenter</span>
                                 cette
                             </span>
