fine-tuning concordance3

--- a/french/pages/exercise_concordance3.html
+++ b/french/pages/exercise_concordance3.html
@@ -635,9 +635,9 @@
                                     les lettres de l’alphabet
                                 </span>
                             </span>
-                            qu’
+
                             <span class="sentence-with-hint">
-                                elle (<b title="avait déjà écrites">écrire
+                                qu’elle (<b title="avait déjà écrites">écrire
                                     <span class="hint" title="">déjà</span></b>)
                                 <input type="text" class="wide" pattern="avait déjà écrites">
                             </span>
